--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-[#0f1117] text-gray-100 overflow-hidden">
+  <body class="bg-[#0f1117] text-gray-100">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
